--- a/public/notes.html
+++ b/public/notes.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/1242/1242436.png">
   </head>
 
   <body>
@@ -44,6 +45,12 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer mt-auto py-3 bg-light text-center">
+        <div class="container">Favicon made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
+    </footer>
+
     <script src="/assets/js/index.js"></script>
   </body>
 </html>
