--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/1242/1242436.png">
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navbar navbar-dark bg-custom-1">
     <a class="navbar-brand" href="/">Note Taker
     </a>
   </nav>
   <div class="container">
-    <div style="margin-top: 80px;" class="jumbotron text-center">
+    <div style="margin-top: 80px;" class="jumbotron text-center bg-custom-1">
       <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
     </div>
   </div>
+
+  <footer class="footer mt-auto py-3 bg-light text-center">
+    <div class="container">Favicon made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
+  </footer>
+
   <script src="/assets/js/index.js"></script>
 </body>
 
